force-app/main/default/objects/Ohm_Instruction_Source__c/Ohm_Instruction_Source__c.object-meta.xml
<CustomObject>
<label>Ohm Instruction Source</label><pluralLabel>Ohm Instruction Sources</pluralLabel>
<nameField><displayFormat>SOURCE-{00000}</displayFormat><label>Source Number</label><type>AutoNumber</type></nameField>
<sharingModel>Read</sharingModel></CustomObject>