force-app/main/default/objects/Ohm_Instruction_Source__c/fields/Manifest__c.field-meta.xml
<CustomField><fullName>Manifest__c</fullName><label>Manifest</label><type>LongTextArea</type><length>131072</length><visibleLines>5</visibleLines></CustomField>