force-app/main/default/objects/Ohm_Instruction_Source__c/fields/Metadata_Fingerprint__c.field-meta.xml
<CustomField><fullName>Metadata_Fingerprint__c</fullName><label>Metadata Fingerprint</label><type>Text</type><length>64</length></CustomField>