force-app/main/default/objects/Ohm_Instruction_Source__c/fields/Planner_Id__c.field-meta.xml
<CustomField><fullName>Planner_Id__c</fullName><label>Planner Id</label><type>Text</type><length>18</length></CustomField>