force-app/main/default/objects/Ohm_Instruction_Source__c/fields/Provenance__c.field-meta.xml
<CustomField>
    <fullName>Provenance__c</fullName>
    <label>Provenance</label>
    <type>Text</type>
    <length>20</length>
</CustomField>