force-app/main/default/objects/Ohm_Instruction_Source__c/fields/Source_Revision__c.field-meta.xml
<CustomField><fullName>Source_Revision__c</fullName><label>Source Revision</label><type>Text</type><length>255</length></CustomField>